homepage + form validation

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -21,7 +21,7 @@ http {
                 proxy_pass http://node-app;
             }
         }
-        location ~* \.(js|jpg|png|css|map)$ {
+        location ~* \.(js|jpg|png|css|map|mp4)$ {
             #root /usr/nginx/static/libraries/bootstrap-5.1.3/dist/css;
         expires 30d;
         }
