--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,14 +1,21 @@
 services:
 
   nginx:
-    image: nginx
+    build: ./nginx
     container_name: nginx_cont
     working_dir: /usr/nginx
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./nginx/static:/usr/nginx/static
+      - ./nginx/certs:/etc/nginx/certs
+      - ./nginx/iptables:/etc/nginx/iptables
     ports:
       - "8080:80"
+      - "8083:443"
+    cap_add:
+      - NET_ADMIN
+    depends_on:
+      - node
     networks:
       - proxy-network
 
@@ -25,6 +32,19 @@ services:
     networks:
       - database-network
 
+  postgres:
+    image: postgres
+    environment:
+      POSTGRES_PASSWORD: password
+      POSTGRES_USER: user
+      POSTGRES_DB: example_db
+    volumes:
+      - ./postgres/data:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
+    networks:
+    - postgres-network
+
   node:
     build: ./node
     container_name: node_cont
@@ -37,12 +57,18 @@ services:
       - ./node/src:/usr/node/src
     ports:
       - "4000:4000"
+    depends_on:
+      - database
+      - postgres
     networks:
       - proxy-network
       - database-network
+      - postgres-network
   
 networks:
   proxy-network:
     driver: bridge
   database-network:
+    driver: bridge
+  postgres-network:
     driver: bridge
