--- a/node/package.json
+++ b/node/package.json
@@ -19,8 +19,10 @@
     "express": "^4.18.0",
     "express-session": "^1.17.3",
     "node-couchdb": "^1.3.0",
+    "pg": "^8.7.3",
     "request": "^2.88.2",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "wait-port": "^0.2.9"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
