--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -12,7 +12,18 @@ http {
     #http://localhost:8080/...
     server {
         listen 80;
-        root /usr/nginx/static;
+
+        location /socket.io/ {
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_pass http://node-app/socket.io/;
+        }
+
+        location ~* ^(?!/socket.io/).*\.(js|jpg|png|css|map|mp4)$ {
+            root /usr/nginx/static;
+            expires 30d;
+        }
 
         location / {
             proxy_pass http://node-app;
@@ -21,10 +32,7 @@ http {
             #    proxy_pass http://node-app;
             #}
         }
-        location ~* \.(js|jpg|png|css|map|mp4)$ {
-            #root /usr/nginx/static/libraries/bootstrap-5.1.3/dist/css;
-            expires 30d;
-        }
+        
         #location /api/ {
         #    proxy_pass http://node-app;
         #}
@@ -35,7 +43,7 @@ http {
 
         listen 443 ssl;
         listen [::]:443 ssl;
-        root /usr/nginx/static;
+        # root /usr/nginx/static;
 
         # certs sent to the client in SERVER HELLO are concatenated in ssl_certificate
         ssl_certificate /etc/nginx/certs/nginx.crt;
@@ -57,14 +65,22 @@ http {
         # Uncommment this line and add your domain here!
         server_name localhost;
 
+        location /socket.io/ {
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_pass http://node-app/socket.io/;
+        }
+
+        location ~* ^(?!/socket.io/).*\.(js|jpg|png|css|map|mp4)$ {
+            root /usr/nginx/static;
+            expires 30d;
+        }
+
         location / {
             proxy_pass http://node-app;
             proxy_set_header  X-Real-IP  $remote_addr;
             proxy_set_header   Host      $http_host;
-        }
-        location ~* \.(js|jpg|png|css|map|mp4)$ {
-            #root /usr/nginx/static/libraries/bootstrap-5.1.3/dist/css;
-            expires 30d;
         }
 
     }
