--- a/node/package.json
+++ b/node/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "amqplib": "^0.10.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
@@ -21,6 +22,7 @@
     "node-couchdb": "^1.3.0",
     "pg": "^8.7.3",
     "request": "^2.88.2",
+    "socket.io": "^4.5.1",
     "uuid": "^8.3.2",
     "wait-port": "^0.2.9"
   },
