--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,12 +1,13 @@
 worker_processes auto;
 
-events { worker_connections 1024; }
+events { worker_connections 8; }
 
 http {
     include  /etc/nginx/mime.types;
     upstream node-app {
-        server node:4000;
-        ##server node1:3000 weight=1 max_fails=3 fail_timeout=30s;
+        hash $remote_addr consistent;
+        server node1:4000;
+        server node2:4000;
     }
 
     #http://localhost:8080/...
@@ -66,6 +67,9 @@ http {
         server_name localhost;
 
         location /socket.io/ {
+            #proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            #proxy_set_header Host $host;
+            
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
