--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,6 +22,7 @@ services:
 
   rabbitmq:
     image: rabbitmq:3.10.5-management
+    container_name: rabbitmq
     logging:
       driver: none
     ports:
