--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,6 @@
 worker_processes auto;
 
-events { worker_connections 8; }
+events { worker_connections 1024; }
 
 http {
     include  /etc/nginx/mime.types;
@@ -67,8 +67,8 @@ http {
         server_name localhost;
 
         location /socket.io/ {
-            #proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            #proxy_set_header Host $host;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Host $host;
             
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
