--- a/node/package.json
+++ b/node/package.json
@@ -5,13 +5,12 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon -L src/server.js"
+    "dev": "nodemon -L --exec \"apidoc -i src -o src/apidoc && node src/server.js\" --ignore apidoc/"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "amqplib": "^0.10.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
@@ -19,10 +18,13 @@
     "ejs": "^3.1.8",
     "express": "^4.18.0",
     "express-session": "^1.17.3",
+    "jsonwebtoken": "^8.5.1",
     "node-couchdb": "^1.3.0",
+    "nodemailer": "^6.7.7",
+    "pg": "^8.7.3",
     "request": "^2.88.2",
-    "socket.io": "^4.5.1",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "wait-port": "^0.2.9"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
