--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,10 +14,10 @@ jobs:
     - name: containers list
       run: docker ps
 
-  #test:
-  #  needs: compose
-  #  runs-on: ubuntu-latest
-  #  steps:
-  #  - uses: actions/checkout@v3
-  #  - name: Test node server and api
-  #    run: ./npm test
+  test:
+    needs: compose
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - name: Test node server and api
+      run: ./npm test --prefix ./node
