--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,6 +13,9 @@ jobs:
       run: docker-compose up -d
     - name: containers list
       run: docker ps
+    - name: wait for service to be up and running
+      run: sleep 10s
+      shell: bash
     - name: test api and server
       run: npm test --prefix ./node
 
