--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -6,7 +6,7 @@ on:
 jobs:
 
   create_env_file:
-  runs on: ubuntu-latest
+  runs-on: ubuntu-latest
   steps:
     - name: Create .env file based on Github Secrets
       uses: ozaytsev86/create-env-file-action@v1
