--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -4,11 +4,35 @@ on:
   push
 
 jobs:
+#
+#  create_env_file:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Create .env file based on Github Secrets
+#        uses: ozaytsev86/create-env-file-action@v1
+#        with:
+#          ENV_COUCHDB_USER: ${{ secrets.COUCHDB_USER }}
+#          ENV_COUCHDB_PASSWORD: ${{ secrets.COUCHDB_PASSWORD }}
+#          ENV_POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
+#          ENV_POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
+#          ENV_POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
+#          ENV_SESSION_SECRET_KEY: ${{ secrets.SESSION_SECRET_KEY }}
+#          ENV_EMAIL_APP: ${{ secrets.EMAIL_APP }}
+#          ENV_EMAIL_APP_PASSWORD: ${{ secrets.APP_PASSWORD }}
+#          ENV_EMAIL_SECRET: ${{ secrets.EMAIL_SECRET }}
+#          ENV_CLIENT_ID: ${{ secrets.CLIENT_ID }}
+#          ENV_CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
+#          ENV_OPENTRIPMAP_KEY: ${{ secrets.OPENTRIPMAP_KEY }}
+#          ENV_OPENWEATHERMAP_KEY: ${{ secrets.OPENWEATHERMAP_KEY }}
+#          ENV_MAPBOX_KEY: ${{ secrets.MAPBOX_KEY }}
+#          ENV_POSITIONSTACK_KEY: ${{ secrets.POSITIONSTACK_KEY }}
+#
 
-  create_env_file:
+  compose:
+    needs: create_env_file
     runs-on: ubuntu-latest
     steps:
-      - name: Create .env file based on Github Secrets
+    - name: Create .env file based on Github Secrets
         uses: ozaytsev86/create-env-file-action@v1
         with:
           ENV_COUCHDB_USER: ${{ secrets.COUCHDB_USER }}
@@ -26,11 +50,6 @@ jobs:
           ENV_OPENWEATHERMAP_KEY: ${{ secrets.OPENWEATHERMAP_KEY }}
           ENV_MAPBOX_KEY: ${{ secrets.MAPBOX_KEY }}
           ENV_POSITIONSTACK_KEY: ${{ secrets.POSITIONSTACK_KEY }}
-
-  compose:
-    needs: create_env_file
-    runs-on: ubuntu-latest
-    steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
       run: docker-compose up -d
