--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -32,6 +32,7 @@ jobs:
 #    needs: create_env_file
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v3
     - name: Create .env file based on Github Secrets
       uses: ozaytsev86/create-env-file-action@v1
       with:
@@ -50,7 +51,10 @@ jobs:
         ENV_OPENWEATHERMAP_KEY: ${{ secrets.OPENWEATHERMAP_KEY }}
         ENV_MAPBOX_KEY: ${{ secrets.MAPBOX_KEY }}
         ENV_POSITIONSTACK_KEY: ${{ secrets.POSITIONSTACK_KEY }}
-    - uses: actions/checkout@v3
+    - name: list all files
+      run: ls -a
+    - name: see .env file
+      run: cat .env
     - name: Build the Docker image
       run: docker-compose up -d
     - name: containers list
