--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -33,24 +33,24 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - name: Create .env file based on Github Secrets
-      uses: ozaytsev86/create-env-file-action@v1
+    - name: Make envfile
+      uses: SpicyPizza/create-envfile@v1.3
       with:
-        ENV_COUCHDB_USER: ${{ secrets.COUCHDB_USER }}
-        ENV_COUCHDB_PASSWORD: ${{ secrets.COUCHDB_PASSWORD }}
-        ENV_POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
-        ENV_POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
-        ENV_POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
-        ENV_SESSION_SECRET_KEY: ${{ secrets.SESSION_SECRET_KEY }}
-        ENV_EMAIL_APP: ${{ secrets.EMAIL_APP }}
-        ENV_EMAIL_APP_PASSWORD: ${{ secrets.APP_PASSWORD }}
-        ENV_EMAIL_SECRET: ${{ secrets.EMAIL_SECRET }}
-        ENV_CLIENT_ID: ${{ secrets.CLIENT_ID }}
-        ENV_CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
-        ENV_OPENTRIPMAP_KEY: ${{ secrets.OPENTRIPMAP_KEY }}
-        ENV_OPENWEATHERMAP_KEY: ${{ secrets.OPENWEATHERMAP_KEY }}
-        ENV_MAPBOX_KEY: ${{ secrets.MAPBOX_KEY }}
-        ENV_POSITIONSTACK_KEY: ${{ secrets.POSITIONSTACK_KEY }}
+        envkey_COUCHDB_USER: ${{ secrets.COUCHDB_USER }}
+        envkey_COUCHDB_PASSWORD: ${{ secrets.COUCHDB_PASSWORD }}
+        envkey_POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
+        envkey_POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
+        envkey_POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
+        envkey_SESSION_SECRET_KEY: ${{ secrets.SESSION_SECRET_KEY }}
+        envkey_EMAIL_APP: ${{ secrets.EMAIL_APP }}
+        envkey_EMAIL_APP_PASSWORD: ${{ secrets.APP_PASSWORD }}
+        envkey_EMAIL_SECRET: ${{ secrets.EMAIL_SECRET }}
+        envkey_CLIENT_ID: ${{ secrets.CLIENT_ID }}
+        envkey_CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
+        envkey_OPENTRIPMAP_KEY: ${{ secrets.OPENTRIPMAP_KEY }}
+        envkey_OPENWEATHERMAP_KEY: ${{ secrets.OPENWEATHERMAP_KEY }}
+        envkey_MAPBOX_KEY: ${{ secrets.MAPBOX_KEY }}
+        envkey_POSITIONSTACK_KEY: ${{ secrets.POSITIONSTACK_KEY }}
     - name: list all files
       run: ls -a
     - name: see .env file
