--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -11,36 +11,13 @@ http {
     }
 
     #http://localhost:8080/...
-    ##server {
-    ##    listen 80;
-
-    ##    location /socket.io/ {
-    ##        proxy_http_version 1.1;
-    ##        proxy_set_header Upgrade $http_upgrade;
-    ##        proxy_set_header Connection "upgrade";
-    ##        proxy_pass http://node-app/socket.io/;
-    ##    }
-
-    ##    location ~* ^(?!/socket.io/).*\.(js|jpg|png|css|map|mp4)$ {
-    ##        root /usr/nginx/static;
-    ##        expires 30d;
-    ##    }
-
-    ##    location / {
-    ##        proxy_pass http://node-app;
-    ##        #if ($request_method = POST) 
-    ##        #{
-    ##        #    proxy_pass http://node-app;
-    ##        #}
-    ##    }
-    ##    
-    ##    #location /api/ {
-    ##    #    proxy_pass http://node-app;
-    ##    #}
-    ##}
+    server {
+        listen 80;
+        server_name _;
+        return 301 https://localhost:8083/;
+    }
 
     server {
-        
 
         listen 443 ssl;
         listen [::]:443 ssl;
